fix missing Autowired and naming, formatting and documentation refactor